--- a/examples/decode/index.html
+++ b/examples/decode/index.html
@@ -9,14 +9,16 @@
 <body>
 <form>
   <label for="file">
-    Choose a file from your computer:<br />
-    <input type="file" id="file" name="file" />
+    Choose a file from your computer:<br/>
+    <input type="file" id="file" name="file"/>
   </label>
 </form>
-  <div id="errors"></div>
-  <div>
-    <h4>decoded source</h4>
-    <canvas id="source-canvas"></canvas>
-  </div>
+<div>
+  <div id="errors" style="color: red"></div>
+</div>
+<div>
+  <h4>decoded source</h4>
+  <canvas id="source-canvas"></canvas>
+</div>
 </body>
 </html>
