--- a/examples/encode/index.html
+++ b/examples/encode/index.html
@@ -7,11 +7,11 @@
   <script src="./index.js"></script>
 </head>
 <body>
-  <div id="info"></div>
-  <div id="errors"></div>
-  <div>
-    <h4>canvas source</h4>
-    <canvas id="source-canvas"></canvas>
-  </div>
+<div id="info"></div>
+<div id="errors" style="color: red"></div>
+<div>
+  <h4>canvas source</h4>
+  <canvas id="source-canvas"></canvas>
+</div>
 </body>
 </html>
