--- a/examples/exif/index.html
+++ b/examples/exif/index.html
@@ -9,10 +9,13 @@
 <body>
 <form>
   <label for="file">
-    Choose a file from your computer:<br />
-    <input type="file" id="file" name="file" />
+    Choose a file from your computer:<br/>
+    <input type="file" id="file" name="file"/>
   </label>
 </form>
+<div>
+  <div id="errors" style="color: red" ></div>
+</div>
 <table style="margin-top: 12px;">
   <thead>
   <tr>
