--- a/examples/magic/index.html
+++ b/examples/magic/index.html
@@ -13,12 +13,15 @@
     <input type="file" id="file" name="file"/>
   </label>
 </form>
+<div>
+  <div id="errors" style="color: red"></div>
+</div>
 <table style="margin-top: 12px;">
   <thead>
-    <tr>
-      <th>MIME Type</th>
-      <th>Extension</th>
-    </tr>
+  <tr>
+    <th>MIME Type</th>
+    <th>Extension</th>
+  </tr>
   </thead>
   <tbody>
   <tr>
@@ -27,7 +30,5 @@
   </tr>
   </tbody>
 </table>
-<div id="error">
-</div>
 </body>
 </html>
