--- a/examples/info/index.html
+++ b/examples/info/index.html
@@ -9,10 +9,13 @@
 <body>
 <form>
   <label for="file">
-    Choose a file from your computer:<br />
-    <input type="file" id="file" name="file" />
+    Choose a file from your computer:<br/>
+    <input type="file" id="file" name="file"/>
   </label>
 </form>
+<div>
+  <div id="errors" style="color: red"></div>
+</div>
 <table style="margin-top: 12px;">
   <thead>
   <tr>
@@ -23,6 +26,5 @@
   <tbody id="info-table-body">
   </tbody>
 </table>
-<div id="error"></div>
 </body>
 </html>
