--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -13,7 +13,7 @@
 <!-- load code you want to test here -->
 
 <!-- load your test files here -->
-<script type="module" src="../buffer-util.spec.js"></script>
+<script src="inkjet-test-bundle.js"></script>
 
 <script>
   mocha.run();
