--- a/data/inkjet-matrix.html
+++ b/data/inkjet-matrix.html
@@ -21,7 +21,7 @@
         <td class="chrome result bg-green">85</td>
         <td class="firefox result bg-green">81</td>
         <td class="edge result bg-green">85</td>
-        <td class="ie result bg-yellow">11*</td>
+        <td class="ie result almost bg-yellow">11*</td>
         <td class="safari result bg-green">14</td>
     </tr>
 </table>
